# cassini

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  GEMINI.md  LICENSE  LICENSE-COMMERCIAL.md  PLAN_cross_chart_highlighting.md  README.md  SECURITY.md  docker-compose.full.yml  docker-compose.playground.yml  docker-compose.prod.yml  docker-compose.test-dbs.yml  docker-compose.yml  docker-entrypoint.playground.sh  docker-entrypoint.sh  initial prompt.txt  sample-inspector-playground.html
backend/: .env.example  .gitignore  .signature_key  ARCHITECTURE.md  BE-001_CHECKLIST.md  BE-001_IMPLEMENTATION_SUMMARY.md  BE-002_CHECKLIST.md  BE-002_FILES_CREATED.md  BE-002_IMPLEMENTATION_SUMMARY.md  BE-003-CHECKLIST.md  BE-003-IMPLEMENTATION-SUMMARY.md  BE-004-CHECKLIST.md  BE-005-IMPLEMENTATION-SUMMARY.md  BE-009-IMPLEMENTATION.md  BE-009-QUICK-REFERENCE.md  BE-009-SUMMARY.md  BE-014_IMPLEMENTATION_SUMMARY.md  BE-018_IMPLEMENTATION_SUMMARY.md  DATABASE.md  IMPLEMENTATION_BE006.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_DATABASE.md  README.md  README_DATABASE.md  ROLLING_WINDOW_IMPLEMENTATION.md  SCHEMA_DIAGRAM.md  alembic.ini  cassini-server.spec  cassini-tray.spec  e2e-manifest.json  example_hierarchy_app.py  pyproject.toml  start-e2e.ps1  start.bat  start.sh  test-e2e.db-shm  test-e2e.db-wal  test_imports.py  test_manual.py  test_nelson_integration.py  (+5 more)
backend/alembic/: env.py
backend/alembic/versions/: 028_add_cusum_ewma_support.py  029_add_report_schedule.py  039_sprint9_advanced_analytics.py  040_fix_gage_port_constraint.py  041_fix_rule_preset_constraints.py  043_add_brand_config.py  044_add_display_key_format.py  20260202_0000_initial_schema.py  20260203_add_subgroup_modes.py  20260204_add_decimal_precision.py  20260204_add_mqtt_broker.py  20260205_add_require_acknowledgement.py  20260205_add_sample_edit_history.py  20260206_add_annotation_table.py  20260206_add_characteristic_config.py  20260207_add_plant.py  20260208_add_user_tables.py  20260209_add_broker_payload_format.py  20260210_add_broker_outbound.py  20260210_add_metric_name.py  20260210_add_opcua_server.py  20260210_jti_data_sources.py  20260211_0000_schema_hardening.py  20260211_add_api_key_prefix.py  20260211_purge_history.py  20260211_retention_policy.py  20260212_add_annotation_history.py  20260212_add_attribute_columns.py  20260212_add_audit_log.py  20260212_add_capability_history.py  20260212_add_notifications.py  20260213_add_annotation_time_range.py  20260213_add_oidc_config.py  20260214_add_must_change_password.py  20260214_anomaly_detection.py  20260214_electronic_signatures.py  20260216_dialect_portability.py  20260221_sprint5_statistical_credibility.py  (+51 more)
backend/data/: instance-id
backend/docs/: BE-003-Statistical-Utilities.md  BE-005-Nelson-Rules.md  BE-010-checklist.md  BE-010-files-summary.md  BE-010-implementation-notes.md  BE-011-IMPLEMENTATION.md  BE-013-Alert-Manager.md  BE-019-Real-Time-Broadcasting.md  REPOSITORY_GUIDE.md  STATISTICAL-CONSTANTS-TABLE.md  WEBSOCKET.md
backend/examples/: event_bus_example.py  event_bus_integration_example.py  manual_provider_example.py  rolling_window_demo.py  rolling_window_nelson_integration.py  spc_engine_example.py  websocket_example.py
backend/scripts/: .gitattributes  README.md  __init__.py  mssql-init.sh  reset_e2e_db.py  reset_password.py  seed_aerospace.py  seed_batch.py  seed_chart_showcase.py  seed_continuous.py  seed_data_center.py  seed_db.py  seed_discrete.py  seed_distillery.py  seed_e2e.py  seed_e2e_pg.py  seed_e2e_unified.py  seed_fda_demo.py  seed_feature_tour.py  seed_nist_reference.py  seed_pharma.py  seed_semiconductor.py  seed_showcase.py  seed_steel_mill.py  seed_test_nelson.py  seed_test_sprint5.py  seed_test_sprint6.py  seed_test_sprint7.py  seed_test_sprint8.py  seed_test_sprint9.py  seed_utils.py  seed_with_samples.py  smoke_ai_analysis.py  smoke_sop_rag.py  test_db_setup.py  validate_imports.py
backend/test-envs/: run_tests.py
backend/tests/: __init__.py  conftest.py  test_api_key_prefix.py  test_audit_integrity.py  test_broker_interfaces.py  test_broker_local.py  test_broker_valkey.py  test_cli.py  test_cli_auth_endpoint.py  test_cli_client.py  test_cli_commands.py  test_cli_credentials.py  test_cluster_status.py  test_config_broker.py  test_correlation_id.py  test_event_adapter.py  test_health_enhanced.py  test_leader_election.py  test_mcp_resources.py  test_mcp_server.py  test_msa_linearity.py  test_role_system.py  test_scoped_api_key_enforcement.py  test_scoped_api_keys.py  test_service.py  test_showcase_consistency.py  test_source_tagging.py  test_spc_consumer.py  test_spc_recovery.py  test_toml_config.py  test_tray.py  test_ws_fanout.py
bridge/: README.md  cassini-bridge.spec  pyproject.toml
bridge/tests/: test_offline_buffer.py  test_parsers.py  test_serial_reader.py
(+2104 files in other folders)
