[project]
name = "cassini"
version = "0.0.9"
description = "Event-Driven Statistical Process Control System"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "aiomqtt>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "websockets>=12.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "argon2-cffi>=23.1.0",
    "protobuf>=5.29.0",
    "slowapi>=0.1.9",
    "structlog>=24.1.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[project.scripts]
cassini = "cassini.cli.main:cli"

[project.optional-dependencies]
opcua = [
    "asyncua>=1.1.0",
]
databases = [
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aioodbc>=0.5.0",
]
notifications = [
    "aiosmtplib>=3.0.0",
    "pywebpush>=2.0.0",
]
sso = [
    "authlib>=1.3.0",
]
reporting = [
    "xhtml2pdf>=0.2.16",
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.0",
]
erp = [
    "croniter>=1.4.0",
    "jsonpath-ng>=1.6.0",
]
analytics = [
    "statsmodels>=0.14.0",
    "ruptures>=1.1.9",
]
ml = [
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
]
tray = [
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]
windows = [
    "pywin32>=306",
]
cluster = [
    "redis[hiredis]>=5.0",
]
mcp = [
    "mcp>=1.0",
]
test-containerized = [
    "testcontainers[postgres,mysql,mssql,redis]>=4.5",
    "aiomqtt>=2.3",
]
desktop = [
    "cassini[windows,tray]",
]
all = [
    "cassini[opcua,databases,notifications,sso,reporting,erp,analytics,ml]",
]
dev = [
    "cassini[all]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.97.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pypdf>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cassini", "src/openspc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "syw: Show Your Work contract tests (display value == explain value)",
    "nist: NIST reference dataset validation tests",
    "validation: Statistical validation tests against certified values",
    "containerized: tests that spin Docker containers via testcontainers (opt-in)",
    "live_broker: tests that require a live MQTT broker container (subset of containerized)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
