[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cassini-bridge"
version = "0.1.0"
description = "Cassini SPC gage bridge agent — RS-232/USB serial to MQTT"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "paho-mqtt>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
cassini-bridge = "cassini_bridge.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
